<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context="com.crystal.mulerosCEDI.ui.PrincipalActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPrincipalE"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:layout_marginBottom="2dp"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="10sp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlFondo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="6dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnChequeoEan"
                        android:layout_width="240dp"
                        android:layout_height="63dp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10sp"
                        android:backgroundTint="@color/white"
                        android:text="@string/txt_btnChequeo"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.428"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnConteoReserva"
                        android:layout_width="240dp"
                        android:layout_height="63dp"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="10sp"
                        android:backgroundTint="@color/white"
                        android:text="@string/txt_btnConteo"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.428"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnChequeoEan" />

                    <Button
                        android:id="@+id/btnSalir"
                        android:layout_width="100dp"
                        android:layout_height="63dp"
                        android:layout_marginTop="4dp"
                        android:backgroundTint="@color/rojo_claro"
                        android:text="@string/txt_btnSalir"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.538"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnConteoReserva"
                        tools:text="SALIR" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvEquipoPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:text="@string/app_version"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>